# sample-repos

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
orkest/: __init__.py  main.py
orkest/adapters/inbound/: __init__.py
orkest/adapters/outbound/: __init__.py
orkest/api/: __init__.py  agents.py  app.py  errors.py  middleware.py  router.py  todos.py  users.py
orkest/api/schemas/: todos.py  users.py
orkest/auth/: __init__.py  decorators.py  dependencies.py  jwt.py  router.py
orkest/db/: __init__.py  models.py  session.py
orkest/factory/: __init__.py  schema_registry.py  template_engine.py
orkest/security/: password.py
tests/: test_auth.py  test_todos.py  test_users.py
