[project]
name = "orkest"
version = "0.1.0"
description = "Orkest CLI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.0.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "pyjwt>=2.10.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
]

[project.scripts]
orkest = "orkest.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orkest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
